--- a/SGL/Trab001DAW/estilo.css
+++ b/SGL/Trab001DAW/estilo.css
@@ -1,7 +1,77 @@
 body{
     background-color: aquamarine;
 }
-.topo{
-    background-color: aqua;
-    text-align: center;
+.arquivos{
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 20%;
+    height: 90%;
+    background-color: lightblue;
+}
+.creditos{
+    position: absolute;
+    top: 90%;
+    left: 0%;
+    width: 20%;
+    height: 10%;
+    background-color: lightgreen;
+}
+.botoes{
+    position: absolute;
+    top: 0%;
+    left: 20%;
+    width: 60%;
+    height: 10%;
+    background-color: pink;
+}
+.login{
+    position: absolute;
+    top: 0%;
+    left: 80%;
+    width: 20%;
+    height: 10%;
+    background-color: lightgreen;
+}
+
+.janelas{
+    position: absolute;
+    top: 10%;
+    left: 20%;
+    width: 50%;
+    height: 5%;
+    background-color: lightgreen;
+}
+.texto{
+    position: absolute;
+    top: 15%;
+    left: 20%;
+    width: 50%;
+    height: 85%;
+    background-color: gray;
+}
+
+#sap2{
+    position: absolute;
+    top: 10%;
+    left: 70%;
+    width: 1920*30/100px;
+    height: 1080*50/100px;
+    background-color: rgb(222, 222, 231);
+}
+.display{
+    position: absolute;
+    top: 60%;
+    left: 70%;
+    width: 30%;
+    height: 20%;
+    background-color: rgb(174, 208, 152);
+}
+.output{
+    position: absolute;
+    top: 80%;
+    left: 70%;
+    width: 30%;
+    height: 20%;
+    background-color: rgb(230, 243, 166);
 }
