--- a/SGL/Trab001DAW/estilo.css
+++ b/SGL/Trab001DAW/estilo.css
@@ -55,8 +55,6 @@ body{
     position: absolute;
     top: 10%;
     left: 70%;
-    width: 1920*30/100px;
-    height: 1080*50/100px;
     background-color: rgb(222, 222, 231);
 }
 .display{
@@ -74,4 +72,8 @@ body{
     width: 30%;
     height: 20%;
     background-color: rgb(230, 243, 166);
+}
+/* TEXTO */
+h1{
+    margin-top: 0px;
 }
