--- a/SGL/Trab001DAW/daw/css/output.css
+++ b/SGL/Trab001DAW/daw/css/output.css
@@ -1,8 +1,15 @@
-.hex-display, .output {
+.hex-display, .output, .sap2 {
   flex: 1;
   background-color: #1e1e1e;
   border: 1px solid #444;
   padding: 1em;
+}
+.sap2 {
+  flex-grow: 1;
+}
+.hex-display, .output{
+  min-height: 5.5em;
+  max-height: 6.5em;
 }
 
 .hex-output {
@@ -14,8 +21,7 @@
 .output-log {
   background-color: #252526;
   color: #dcdcaa;
-  padding: 1em;
-  height: 100px;
-  overflow-y: auto;
+  padding: 0.5em;
+  height: 40%;
   border: 1px solid #444;
 }
