--- a/SGL/Trab001DAW/daw/css/files.css
+++ b/SGL/Trab001DAW/daw/css/files.css
@@ -36,4 +36,17 @@
     text-align: right;
 }
 
+.buttonOpenFile{
+    background: #222;
+    display: flex;
+    flex-grow: 1;
+    text-align: right;
+
+    min-height: 50px;
+    max-height: 50px;
+    background-color: #444;
+    text-align: center;
+    align-items: center;
+}
+
   
