--- a/SGL/TrabalhoDoAno/Principal/css/base.css
+++ b/SGL/TrabalhoDoAno/Principal/css/base.css
@@ -34,7 +34,10 @@ h1, h2, h3 {
 
 .janelas {
   background-color: #222;
+  display: flex;
+  flex-direction: row;
   color: #dcdcaa;
+  gap: 10px;
   padding: 0.5em;
   min-height: 15%;
   border: 1px solid #444;
